microraiden/microraiden/webui/js/styles.css
@font-face {
  font-family: 'Glyphicons Halflings';
  src: url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.eot');
  src: url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
       url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.woff2') format('woff2'),
       url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.woff') format('woff'),
       url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
       url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

.no-print {
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

.mw-body {
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

.mw-body {
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

#mw-navigation {
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

#footer {
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: blur(5px);
}

#overlay {
  filter: none !important;
  position: fixed; /* Sit on top of the page content */
  /*display: none;*/
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
  z-index: 10; /* Specify a stack order in case you're using a different order for other elements */
  cursor: pointer; /* Add a pointer on hover */
}

@media screen and (min-width: 980px) {
  .box-container {
    font-size: 16px;
    width: 750px;
    margin: auto;
    margin-top: 50px;
    box-shadow: 0 0 20px #888888;
  }
}

@media screen and (max-width: 979px) {
  .box-container {
    font-size: 16px;
    width: 70%;
    margin-left: 15%;
    margin-right: 15%;
    margin-top: 50px;
    box-shadow: 0 0 20px #888888;
  }
}

.panel-heading {
  text-align: center;
}

.logo {
  height: 65px;
  float: left;
  margin-right: -50px;
}

.panel-body {
  text-align: center;
}

.account-dropdown {
  margin-top: 35px;
  margin-bottom: 30px;
}

.account-label {
  padding-left: 125px !important;
  padding-top: 7px;
}

.account-select {
  font-size: 16px !important;
  width: auto !important;
  margin-left: 25px;
}

.log {
  padding-top: 5px;
  padding-bottom: 15px;
}

.loader {
  margin: auto;
  border: 5px solid #f3f3f3; /* Light grey */
  border-top: 5px solid #3498db; /* Blue */
  border-radius: 50%;
  width: 50px;
  height: 50px;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

li {
  display: block;
  float: left;
  padding-left: 37px;
  padding-top: 20px;
  font-size: 16px;
}

.transfer li:before {
  /*Using a Bootstrap glyphicon as the bullet point*/
  content: "\e081";
  font-family: 'Glyphicons Halflings';
  font-size: 25px;
  float: left;
  margin-top: -5px;
  margin-left: 10px;
  padding-right: 10px;
}

.sign li:before {
  /*Using a Bootstrap glyphicon as the bullet point*/
  content: "\270f";
  font-family: 'Glyphicons Halflings';
  font-size: 25px;
  float: left;
  margin-top: -5px;
  margin-left: 10px;
  padding-right: 10px;
}

.deposit {
  margin-top: 30px;
  margin-bottom: 10px;
  padding-left: 40px;
  padding-right: 40px;

}

.alert {
  margin-left: 10px;
  margin-right: 10px;
}

.channel {
  padding-top: 15px;
  padding-bottom: 90px;
}

.status-label {
  font-weight: bold;
  text-align: left;
}

.glyphicon.on-state-opened {
  color: #77b300;
  font-size: 60px;
  padding-left: 90px;
}

.glyphicon.on-state-closed {
  color: #cc0000;
  font-size: 60px;
  padding-left: 90px;
}

.glyphicon.on-state-settled,
.glyphicon.on-state-error {
  color: #ff8800;
  font-size: 50px;
  padding-left: 90px;
}

.status {
  text-align: left;
  font-size: 20px;
}

.balance {
  font-size: 20px;
  text-align: left;
  color: white;
}

.balance-icon {
  font-size: 20px;
  font-weight: bold;
  text-align: left !important;
  color: white;
  padding-left: 0;
}

.balance-label {
  font-weight: bold;
  text-align: left;
}

.btn-bar {
  padding-top: 15px;
}

.box-container .btn {
  font-size: 16px !important;
}

.box-container .input-group {
  font-size: 16px !important;
}

.box-container h3, .h3 {
    font-size: 34px !important;
    color: #ffffff;
}

.box-container h4, .h4 {
    font-size: 24px !important;
    color: #ffffff;
}

.box-container h5, .h5 {
    font-size: 20px !important;
    color: #ffffff;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif !important;
    font-weight: 500 !important;
    line-height: 1.1 !important;
}

.text-danger {
  color: #cc0000 !important;
}

.text-warning {
  color: #ff8800 !important;
}

.text-primary {
  color: #2a9fd6 !important;
}

.green-btn {
  background-color: #77b300 !important;
}

